# edtech-student-success-pipeline

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/actions/run-audit/: action.yml
.github/actions/run-format/: action.yml
.github/actions/run-lint/: action.yml
.github/actions/run-tests/: action.yml
.github/actions/setup-python/: action.yml
.github/actions/upload-reports/: action.yml
.github/workflows/: pr-checks.yml  scheduled-monitoring.yml
notebooks/: 01_exploracion_y_target.ipynb  02_modelado_y_explicabilidad.ipynb  03_generative_ai_intervention.ipynb
src/data/: __init__.py  loader.py
