[project]
name = "edtech-student-success-pipeline"
version = "0.1.0"
description = "ML-driven early intervention system for identifying at-risk students in educational technology platforms using XGBoost, feature engineering, and generative AI for personalized support messaging."
readme = "README.md"
requires-python = ">=3.11, <3.13"
authors = [
    { name = "Alyona Carolina Ivanova Araujo", email = "alenacivanovaa@gmail.com" }
]
keywords = [
    "edtech",
    "machine-learning",
    "student-success",
    "risk-prediction",
    "xgboost",
    "generative-ai",
    "intervention",
    "educational-data-mining"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
    "duckdb>=1.4.4",
    "google-genai>=1.65.0",
    "google-generativeai>=0.8.6",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=2.0.0,<3",
    "pyarrow>=23.0.1",
    "plotly>=5.18.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.28.0",
    "xgboost>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
